Adjusting files folders

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     </head>
     <body>
             <nav>
-              <a href="../pages/home.html">
+              <a href="./home.html">
                 <img
                     class="nav-logo"
                     src="../assets/shared/desktop/logo-header.svg"
@@ -30,7 +30,7 @@
                 <div id="navigation">
                     <ul>
                         <li>
-                            <a href="../pages/home.html"
+                            <a href="./home.html"
                                 >HOME</a
                             >
                         </li>
@@ -38,7 +38,7 @@
                             ABOUT US
                         </li>
                         <li>
-                            <a href="../pages/create.html"
+                            <a href="./create.html"
                                 >CREATE YOUR PLAN</a
                             >
                         </li>
@@ -52,13 +52,13 @@
             <div class="modal-menu hidden">
                 <ul>
                     <li>
-                        <a href="../pages/home.html">Home</a>
+                        <a href="./home.html">Home</a>
                     </li>
                     <li>
                         About Us
                     </li>
                     <li>
-                        <a href="../pages/create.html"
+                        <a href="./create.html"
                             >Create Your Plan</a
                         >
                     </li>
@@ -157,13 +157,13 @@
                 />
                 <ul>
                     <li>
-                        <a href="../pages/home.html">HOME</a>
+                        <a href="./home.html">HOME</a>
                     </li>
                     <li>
                         ABOUT US
                     </li>
                     <li>
-                        <a href="../pages/create.html"
+                        <a href="./create.html"
                             >CREATE YOUR PLAN</a
                         >
                     </li>
