--- a/home.html
+++ b/home.html
@@ -14,16 +14,16 @@
         <link
             rel="icon"
             type="image/x-icon"
-            href="../assets/favicon.png"
+            href="./assets/favicon.png"
         />
-        <link rel="stylesheet" href="../css/style.css" />
+        <link rel="stylesheet" href="./css/style.css" />
     </head>
     <body>
             <nav>
-              <a href="../pages/home.html">
+              <a href="./home.html">
                 <img
                     class="nav-logo"
-                    src="../assets/shared/desktop/logo-header.svg"
+                    src="./assets/shared/desktop/logo-header.svg"
                     alt="Coffeeroaster Logo"
                 />
               </a>
@@ -31,12 +31,12 @@
                     <ul>
                         <li>HOME</li>
                         <li>
-                            <a href="../pages/about.html"
+                            <a href="./about.html"
                                 >ABOUT US</a
                             >
                         </li>
                         <li>
-                            <a href="../pages/create.html"
+                            <a href="./create.html"
                                 >CREATE YOUR PLAN</a
                             >
                         </li>
@@ -44,17 +44,17 @@
                 </div>
 
                 <div class="hamburger-menu">
-                    <img src="../assets/shared/mobile/icon-hamburger.svg" alt="">
+                    <img src="./assets/shared/mobile/icon-hamburger.svg" alt="">
                 </div>
             </nav>
             <div class="modal-menu hidden">
                 <ul>
                     <li>Home</li>
                     <li>
-                        <a href="../pages/about.html">About Us</a>
+                        <a href="./about.html">About Us</a>
                     </li>
                     <li>
-                        <a href="../pages/create.html"
+                        <a href="./create.html"
                             >Create Your Plan</a
                         >
                     </li>
@@ -71,7 +71,7 @@
                         delivered directly to your door, at your
                         schedule.
                     </p>
-                    <button onclick="document.location='../pages/create.html'">
+                    <button onclick="document.location='./create.html'">
                         Create your plan
                     </button>
                 </div>
@@ -86,7 +86,7 @@
                         <div class="coffee">
                             <div class="product-image">
                                 <img
-                                    src="../assets/home/desktop/image-gran-espresso.png"
+                                    src="./assets/home/desktop/image-gran-espresso.png"
                                     alt=""
                                 />
                             </div>
@@ -103,7 +103,7 @@
                         <div class="coffee">
                             <div class="product-image">
                                 <img
-                                    src="../assets/home/desktop/image-planalto.png"
+                                    src="./assets/home/desktop/image-planalto.png"
                                     alt=""
                                 />
                             </div>
@@ -120,7 +120,7 @@
                         <div class="coffee">
                             <div class="product-image">
                                 <img
-                                    src="../assets/home/desktop/image-piccollo.png"
+                                    src="./assets/home/desktop/image-piccollo.png"
                                     alt=""
                                 />
                             </div>
@@ -136,7 +136,7 @@
                         <div class="coffee">
                             <div class="product-image">
                                 <img
-                                    src="../assets/home/desktop/image-danche.png"
+                                    src="./assets/home/desktop/image-danche.png"
                                     alt=""
                                 />
                             </div>
@@ -161,7 +161,7 @@
                     </p>
                     <div class="option-cards">
                         <div class="card card--option">
-                            <img src="../assets/home/desktop/icon-coffee-bean.svg" alt="" />
+                            <img src="./assets/home/desktop/icon-coffee-bean.svg" alt="" />
                             <div class="option__description">
                                 <h1>Best quality</h1>
                                 <p>
@@ -171,7 +171,7 @@
                             </div>
                         </div>
                         <div class="card card--option">
-                            <img src="../assets/home/desktop/icon-gift.svg" alt="" />
+                            <img src="./assets/home/desktop/icon-gift.svg" alt="" />
                             <div class="option__description">
                             <h1>Exclusive benefits</h1>
                             <p>
@@ -181,7 +181,7 @@
                             </div>
                         </div>
                         <div class="card card--option">
-                            <img src="../assets/home/desktop/icon-truck.svg" alt="" />
+                            <img src="./assets/home/desktop/icon-truck.svg" alt="" />
                             <div class="option__description">
                             <h1>Free shipping</h1>
                             <p>
@@ -239,31 +239,31 @@
             <footer>
                 <img
                     class="footer-logo"
-                    src="../assets/shared/desktop/logo-footer.svg"
+                    src="./assets/shared/desktop/logo-footer.svg"
                     alt="Coffeeroaster Logo"
                 />
                 <ul>
                     <li>HOME</li>
                     <li>
-                        <a href="../pages/about.html">ABOUT US</a>
+                        <a href="./about.html">ABOUT US</a>
                     </li>
                     <li>
-                        <a href="../pages/create.html"
+                        <a href="./create.html"
                             >CREATE YOUR PLAN</a
                         >
                     </li>
                 </ul>
                 <div class="socials">
                     <img
-                        src="../assets/shared/desktop/icon-facebook.svg"
+                        src="./assets/shared/desktop/icon-facebook.svg"
                         alt="Coffeeroaster Facebook"
                     />
                     <img
-                        src="../assets/shared/desktop/icon-twitter.svg"
+                        src="./assets/shared/desktop/icon-twitter.svg"
                         alt="Coffeeroaster Twitter"
                     />
                     <img
-                        src="../assets/shared/desktop/icon-instagram.svg"
+                        src="./assets/shared/desktop/icon-instagram.svg"
                         alt="Coffeeroaster Instagram"
                     />
                 </div>
