--- a/create.html
+++ b/create.html
@@ -14,28 +14,28 @@
         <link
             rel="icon"
             type="image/x-icon"
-            href="../assets/favicon.png"
+            href="./assets/favicon.png"
         />
         <link rel="stylesheet" href="../css/style.css" />
     </head>
     <body>
             <nav>
-              <a href="../pages/home.html">
+              <a href="./home.html">
                 <img
                     class="nav-logo"
-                    src="../assets/shared/desktop/logo-header.svg"
+                    src="./assets/shared/desktop/logo-header.svg"
                     alt="Coffeeroaster Logo"
                 />
               </a>
                 <div id="navigation">
                     <ul>
                         <li>
-                            <a href="../pages/home.html"
+                            <a href="./home.html"
                                 >HOME</a
                             >
                         </li>
                         <li>
-                            <a href="../pages/about.html"
+                            <a href="./about.html"
                                 >ABOUT US</a
                             >
                         </li>
@@ -46,16 +46,16 @@
                 </div>
 
                 <div class="hamburger-menu">
-                    <img src="../assets/shared/mobile/icon-hamburger.svg" alt="">
+                    <img src="./assets/shared/mobile/icon-hamburger.svg" alt="">
                 </div>
             </nav>
             <div class="modal-menu hidden">
                 <ul>
                     <li>
-                        <a href="../pages/home.html">Home</a>
+                        <a href="./home.html">Home</a>
                     </li>
                     <li>
-                        <a href="../pages/about.html">About Us</a>
+                        <a href="./about.html">About Us</a>
                     </li>
                     <li>
                         Create Your Plan
@@ -163,7 +163,7 @@
                                     How do you drink your coffee?
                                 </h1>
                                 <div class="arrow-wrap">
-                                    <img src="../assets/plan/desktop/icon-arrow.svg" alt="">
+                                    <img src="./assets/plan/desktop/icon-arrow.svg" alt="">
                                 </div>
                             </div>
                         
@@ -201,7 +201,7 @@
                                 What type of coffee?
                                 </h1>
                                 <div class="arrow-wrap">
-                                    <img src="../assets/plan/desktop/icon-arrow.svg" alt="">
+                                    <img src="./assets/plan/desktop/icon-arrow.svg" alt="">
                                 </div>
                             </div>
                             <div class="answers">
@@ -238,7 +238,7 @@
                                 How much would you like?
                                 </h1>
                                 <div class="arrow-wrap">
-                                    <img src="../assets/plan/desktop/icon-arrow.svg" alt="">
+                                    <img src="./assets/plan/desktop/icon-arrow.svg" alt="">
                                 </div>
                             </div>
                             <div class="answers">
@@ -275,7 +275,7 @@
                                 Want us to grind them?
                                 </h1>
                                 <div class="arrow-wrap">
-                                    <img src="../assets/plan/desktop/icon-arrow.svg" alt="">
+                                    <img src="./assets/plan/desktop/icon-arrow.svg" alt="">
                                 </div>
                             </div>
                             <div class="answers">
@@ -312,7 +312,7 @@
                                 How often should we deliver?
                                 </h1>
                                 <div class="arrow-wrap">
-                                    <img src="../assets/plan/desktop/icon-arrow.svg" alt="">
+                                    <img src="./assets/plan/desktop/icon-arrow.svg" alt="">
                                 </div>
                             </div>
                             <div class="answers">
@@ -389,15 +389,15 @@
             <footer>
                 <img
                     class="footer-logo"
-                    src="../assets/shared/desktop/logo-footer.svg"
+                    src="./assets/shared/desktop/logo-footer.svg"
                     alt="Coffeeroaster Logo"
                 />
                 <ul>
                     <li>
-                        <a href="../pages/home.html">Home</a>
+                        <a href="./home.html">Home</a>
                     </li>
                     <li>
-                        <a href="../pages/about.html">About Us</a>
+                        <a href="./about.html">About Us</a>
                     </li>
                     <li>
                         Create Your Plan
@@ -405,15 +405,15 @@
                 </ul>
                 <div class="socials">
                     <img
-                        src="../assets/shared/desktop/icon-facebook.svg"
+                        src="./assets/shared/desktop/icon-facebook.svg"
                         alt="Coffeeroaster Facebook"
                     />
                     <img
-                        src="../assets/shared/desktop/icon-twitter.svg"
+                        src="./assets/shared/desktop/icon-twitter.svg"
                         alt="Coffeeroaster Twitter"
                     />
                     <img
-                        src="../assets/shared/desktop/icon-instagram.svg"
+                        src="./assets/shared/desktop/icon-instagram.svg"
                         alt="Coffeeroaster Instagram"
                     />
                 </div>
