Fixing semantic issues

--- a/about.html
+++ b/about.html
@@ -19,51 +19,53 @@
         <link rel="stylesheet" href="../css/style.css" />
     </head>
     <body>
-            <nav>
-              <a href="./home.html">
-                <img
-                    class="nav-logo"
-                    src="../assets/shared/desktop/logo-header.svg"
-                    alt="Coffeeroaster Logo"
-                />
-              </a>
-                <div id="navigation">
+            <header>
+                <nav>
+                  <a href="./home.html">
+                    <img
+                        class="nav-logo"
+                        src="../assets/shared/desktop/logo-header.svg"
+                        alt="Coffeeroaster Logo"
+                    />
+                  </a>
+                    <div id="navigation">
+                        <ul>
+                            <li>
+                                <a href="./home.html"
+                                    >HOME</a
+                                >
+                            </li>
+                            <li>
+                                ABOUT US
+                            </li>
+                            <li>
+                                <a href="./create.html"
+                                    >CREATE YOUR PLAN</a
+                                >
+                            </li>
+                        </ul>
+                    </div>
+    
+                    <div class="hamburger-menu">
+                        <img src="../assets/shared/mobile/icon-hamburger.svg" alt="">
+                    </div>
+                </nav>
+                <div class="modal-menu hidden">
                     <ul>
                         <li>
-                            <a href="./home.html"
-                                >HOME</a
-                            >
+                            <a href="./home.html">Home</a>
                         </li>
                         <li>
-                            ABOUT US
+                            About Us
                         </li>
                         <li>
                             <a href="./create.html"
-                                >CREATE YOUR PLAN</a
+                                >Create Your Plan</a
                             >
                         </li>
                     </ul>
                 </div>
-
-                <div class="hamburger-menu">
-                    <img src="../assets/shared/mobile/icon-hamburger.svg" alt="">
-                </div>
-            </nav>
-            <div class="modal-menu hidden">
-                <ul>
-                    <li>
-                        <a href="./home.html">Home</a>
-                    </li>
-                    <li>
-                        About Us
-                    </li>
-                    <li>
-                        <a href="./create.html"
-                            >Create Your Plan</a
-                        >
-                    </li>
-                </ul>
-            </div>
+            </header>
 
             <main>
                 <section class="card card--about">
