--- a/home.html
+++ b/home.html
@@ -19,47 +19,49 @@
         <link rel="stylesheet" href="./css/style.css" />
     </head>
     <body>
-            <nav>
-              <a href="./home.html">
-                <img
-                    class="nav-logo"
-                    src="./assets/shared/desktop/logo-header.svg"
-                    alt="Coffeeroaster Logo"
-                />
-              </a>
-                <div id="navigation">
+            <header>
+                <nav>
+                  <a href="./home.html">
+                    <img
+                        class="nav-logo"
+                        src="./assets/shared/desktop/logo-header.svg"
+                        alt="Coffeeroaster Logo"
+                    />
+                  </a>
+                    <div id="navigation">
+                        <ul>
+                            <li>HOME</li>
+                            <li>
+                                <a href="./about.html"
+                                    >ABOUT US</a
+                                >
+                            </li>
+                            <li>
+                                <a href="./create.html"
+                                    >CREATE YOUR PLAN</a
+                                >
+                            </li>
+                        </ul>
+                    </div>
+    
+                    <div class="hamburger-menu">
+                        <img src="./assets/shared/mobile/icon-hamburger.svg" alt="">
+                    </div>
+                </nav>
+                <div class="modal-menu hidden">
                     <ul>
-                        <li>HOME</li>
+                        <li>Home</li>
                         <li>
-                            <a href="./about.html"
-                                >ABOUT US</a
-                            >
+                            <a href="./about.html">About Us</a>
                         </li>
                         <li>
                             <a href="./create.html"
-                                >CREATE YOUR PLAN</a
+                                >Create Your Plan</a
                             >
                         </li>
                     </ul>
                 </div>
-
-                <div class="hamburger-menu">
-                    <img src="./assets/shared/mobile/icon-hamburger.svg" alt="">
-                </div>
-            </nav>
-            <div class="modal-menu hidden">
-                <ul>
-                    <li>Home</li>
-                    <li>
-                        <a href="./about.html">About Us</a>
-                    </li>
-                    <li>
-                        <a href="./create.html"
-                            >Create Your Plan</a
-                        >
-                    </li>
-                </ul>
-            </div>
+            </header>
 
             <main>
                 <div class="card card--great--coffee">
